# sentiment-analysis-tws-tokped

./: .gitignore  README.md  crawl.py  pyproject.toml
assets/: nlp methodology.drawio
data/: dictionary.json  pred.csv  tokopedia_tws_f9.csv  tws-clean.csv  tws-sentiment.csv  tws-test.csv  tws-train-ori.csv  tws-train.csv  typo_mapper.json  wrong_preds.csv
notebook/: 1.0-initial-data-exploration.ipynb  2.0-text-preprocessing.ipynb  3.0-sentiment-analysis.ipynb  3.1-sentiment-analysis-original.ipynb  4.0-evaluation.ipynb
